--- a/CarRentingSystem/Views/Cars/Add.cshtml
+++ b/CarRentingSystem/Views/Cars/Add.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
         <h2 class="heading-margin text-center">Add Car</h2>
-
+         
         <form method="post">
             <div class="form-group">
                 <label asp-for="Brand"></label>
@@ -43,6 +43,7 @@
                         <option value="@category.Id">@category.Name</option>
                     }
                 </select>
+                <span asp-validation-for="CategoryId" class="small text-danger"></span>
             </div>
 
             <input class="btn btn-primary float-right" type="submit" value="Save" />
