--- a/CarRentingSystem/Views/Home/Index.cshtml
+++ b/CarRentingSystem/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <p class="lead">
-            <a asp-controller="Cars" asp-action="Add" class="btn btn-primary btn-lg" href="#" role="button">Add car</a>
+            <a asp-controller="Cars" asp-action="Add" class="btn btn-primary btn-lg" role="button">Add car</a>
         </p>
     </div>
 }
