--- a/CarRentingSystem/Views/Shared/_LoginPartial.cshtml
+++ b/CarRentingSystem/Views/Shared/_LoginPartial.cshtml
@@ -5,8 +5,11 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+     <li class="nav-item">
+        <a  class="nav-link text-dark" asp-area="Identity" asp-controller="Dealers" asp-action="Create">Become Dealer</a>
+    </li>
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
