--- a/CarRentingSystem/Views/Cars/All.cshtml
+++ b/CarRentingSystem/Views/Cars/All.cshtml
@@ -73,18 +73,4 @@
     <h2 class="text-center">No cars found by the given criteria!</h2>
 }
 
-<div class="row">
-    @foreach (var car in Model.Cars)
-    {
-        <div class="col-md-4">
-            <div class="card mb-3">
-                <img src="@car.ImageUrl" class="card-img-top" alt="@car.Brand @car.Model - @car.Year (@car.Category)">
-                <div class="card-body text-center">
-                    <h5 class="card-title text-center">@car.Year @car.Brand @car.Model (@car.Category)</h5>
-                    <a asp-controller="Cars" asp-action="Deatails" asp-route-id="@car.Id" class="btn btn-primary">View more</a>
-                </div>
-            </div>
-        </div>
-    }
-</div>
-
+<partial name="_CarsPartial" model="@Model.Cars" />
