Add administrator role

--- a/CarRentingSystem/Views/Shared/_LoginPartial.cshtml
+++ b/CarRentingSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using CarRentingSystem.Data.Models
+@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 @inject IDealerService Dealers
 
 <ul class="navbar-nav">
@@ -9,14 +10,15 @@
     {
         var userId = User.Id();
         var userIsDealer = Dealers.IsDealer(userId);
+        var userIsAdmin = User.IsAdmin();
 
-        if (userIsDealer)
+        if (userIsDealer && !userIsAdmin)
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="Identity" asp-controller="Cars" asp-action="Mine">My Cars </a>
             </li>
         }
-        else
+        else if(!userIsAdmin)
         {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="Identity" asp-controller="Dealers" asp-action="Become">Become Dealer</a>
@@ -24,7 +26,7 @@
         }
 
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account</a>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="  Manage">Account</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
